# Spam-Email-Detection

./: .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/sample/: sample_dataset.csv
src/: __init__.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/config/: config.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: __init__.py  common.py  logger.py  mbox_parser.py
tests/: test_inference_smoke.py  test_preprocessing.py
