[project]
name = "spam-email-detection"
version = "1.0.0"
description = "A robust, modular ML system for classifying emails as Spam or Ham"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "beautifulsoup4>=4.12",
    "streamlit>=1.28",
    "joblib>=1.3",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
